[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=6",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "alphaconf"
dynamic = ["version"]
description = "Write simple scripts leveraging omegaconf"
readme = "README.md"
keywords = ["configuration", "omegaconf", "pydantic", "script"]
license = {text = "BSD License"}
requires-python = ">=3.8"
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Environment :: Console",
]
dependencies = [
    "omegaconf>=2",
]

[project.optional-dependencies]
color = ["colorama"]
dotenv = ["python-dotenv"]
invoke = ["invoke"]
pydantic = ["pydantic>=2"]
toml = ["toml"]

[project.urls]
Homepage = "https://github.com/kmagusiak/alphaconf"

[[project.authors]]
name = "Krzysztof Magusiak"
email = "chrmag@poczta.onet.pl"

[tool.black]
line-length = 100
skip-string-normalization = 1

[tool.mypy]
ignore_missing_imports = true

[tools.setuptools]
packages = ["alphaconf"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
# https://beta.ruff.rs/docs/rules/
select = [
    #"C9",  # mccabe
    #"D",   # documentation
    "E",
    "F",
    "W",
    "I",    # isort
    "N",    # naming
    "UP",   # pyupdate
    "C4",   # comprehensions
    "EXE",
    "SIM",
    "RUF",
]
ignore = [
    "D102",  # mission doc in public method, function
    "D205",  # blank line required betweeen summary and description
    "D400",  # first line should end with a period
    "E731",  # don't assign lambda
    "SIM108",  # simplify ITE by operator
]

[tool.ruff.mccabe]
max-complexity = 10
