[build-system]
requires = [
    "setuptools>=70",
    "setuptools-scm>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["alphaconf"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project]
name = "alphaconf"
dynamic = ["version"]
description = "Write simple scripts leveraging omegaconf"
readme = "README.md"
keywords = ["configuration", "omegaconf", "pydantic", "script"]
license = {text = "BSD License"}
requires-python = ">=3.9"
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Environment :: Console",
]
dependencies = [
    "omegaconf>=2",
]

[project.optional-dependencies]
color = ["colorama"]
dotenv = ["python-dotenv"]
invoke = ["invoke"]
pydantic = ["pydantic>=2"]
toml = ["toml"]
pinned = [
    "invoke==2.2.0",
    "omegaconf==2.3.0",
    "pydantic==2.7.4",
    "pyyaml~=6.0",
    "toml==0.10.2",
]
dev = [
    "mypy~=1.11",
    "ruff==0.5.6",
    "types-pyyaml~=6.0",
    "types-toml>=0.10.8",
]
test = [
    "pytest==8.3.2",
]

[project.urls]
Homepage = "https://github.com/kmagusiak/alphaconf"

[[project.authors]]
name = "Krzysztof Magusiak"
email = "chrmag@poczta.onet.pl"

[tool.black]
line-length = 100
skip-string-normalization = 1

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.format]
quote-style="preserve"

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = [
    "C4",   # flake8 comprehensions
    #"C9",  # mccabe
    "COM",  # flake8 commas
    #"D",   # pydocstyle, pydoclint
    "E",    # pycodestyle
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "I",    # isort
    "LOG",  # flake8 logging
    "N",    # naming
    "PLE",  # pylint errors
    "RET",  # flake8 return
    "RUF",  # ruff specific
    "SIM",  # flake8 simplify
    "TID",  # flake8 tidy imports
    "UP",   # pyupdate
    "W",    # pycodestyle
    # specific rules
    "FIX003" # comments with XXX should become TODO or FIXME
]
ignore = [
    "COM812", # trailing commas (because we use the ruff formatter)
    "D102",  # mission doc in public method, function
    "D205",  # blank line required between summary and description
    "D400",  # first line should end with a period
    "E731",  # don't assign lambda
    "SIM108",  # simplify ITE by operator
    "SIM300",  # yoda condition
    "UP038", # isinstance must use union operator on types
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]